Add Spring SSRF modeling and close scanner gaps